--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif !important;
 }
 
 code {
@@ -12,15 +15,41 @@ code {
     monospace;
 }
 
-.navbar{
+.navbar {
   background-color: black !important;
 }
-.navbar-brand{
+
+.navbar-brand {
   color: white;
 }
-.nav-link{
+
+.nav-link {
   color: white;
 }
-.navbar-nav{
+
+.navbar-nav {
   margin-left: auto;
+}
+
+.smallimg {
+  height: 200px;
+  width: 100% !important;
+  border-radius: 5px !important;
+}
+
+h1 {
+  font-size: 20px !important;
+}
+
+.btn {
+  background-color: black !important;
+  color: white !important;
+  box-shadow: none !important;
+}
+
+.bs {
+  box-shadow: rgbs(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 20px !important;
+  border-radius: 5px !important;
+  padding: 20px !important;
 }
